--- a/app/static/css/account.css
+++ b/app/static/css/account.css
@@ -10,8 +10,8 @@ body {
     width: 100%;
     height: 12%;
     text-align: center;
-    background-color: lightskyblue;
-    color: indigo;
+    background-color: #87cefa;
+    color: #4b0082;
     margin: 10px;
     line-height: 2px;
 }
