--- a/app/templates/actions.html
+++ b/app/templates/actions.html
@@ -186,10 +186,10 @@
         </tr>
         <tr>
             <td class="action-button">
-                <form action="{{ url_for('change_marriage', type='marriage') }}">
+                <form action="{{ url_for('change_marriage', mtype='marriage') }}">
                     <button type="submit" id="get_married">Get married</button>
                 </form>
-                <form action="{{ url_for('change_marriage', type='divorce') }}">
+                <form action="{{ url_for('change_marriage', mtype='divorce') }}">
                     <button type="submit" id="get_divorced">Get divorced</button>
                 </form>
             </td>
@@ -228,12 +228,18 @@
                     <li>pay $1500 school fee to the teacher per new child</li>
                     <li>to have 3rd child, must upgrade house and car</li>
                     <li>4 years to upgrade if twins after first child</li>
+                    <li class="once">less likely to have kids as age:</li>
+                    <ul>
+                        <li class="once" id="child-100">under 36 = 100% chance of child</li>
+                        <li class="once" id="child-75">ages 36-40 = 75% chance of child</li>
+                        <li class="once" id="child-50">ages 41-45 = 50% chance of child</li>
+                    </ul>
                 </ul>
             </td>
             <td>
                 <ul>
                     <li>must be married</li>
-                    <li>age <= 40</li>
+                    <li>age <= 45</li>
                 </ul>
             </td>
             <td class="center">{{ player_info.yrs_til_have_kid }}</td>
@@ -246,13 +252,14 @@
             </td>
             <td>
                 <ul>
-                    <li>pick x numbers on die (x = # kids / 2, round up + 1, max=5)<br>if roll #, get grandchild</li>
+                    <li>pick x numbers on die (x = # kids over 18 / 2, round up, + 1, max=5)</li>
+                    <li>if roll #, get grandchild</li>
                     <li>+200 points per grandchild</li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li>oldest kids must be at least 18</li>
+                    <li>oldest child must be at least 18</li>
                 </ul>
             </td>
             <td class="center">{{ player_info.yrs_til_have_kid }}</td>
@@ -305,7 +312,7 @@
             <td>
                 <ul>
                     <li>must be single</li>
-                    <li>age <= 40</li>
+                    <li>age <= 45</li>
                 </ul>
             </td>
             <td class="center">{{ player_info.yrs_til_peace_corps }}</td>
@@ -325,7 +332,7 @@
             <td>
                 <ul>
                     <li>must be single</li>
-                    <li>age > 40</li>
+                    <li>age > 45</li>
                 </ul>
             </td>
             <td class="center">{{ player_info.yrs_til_mission_trip }}</td>
@@ -408,10 +415,8 @@
     </table>
     <script type="text/javascript">
         var gray = JSON.parse('{{ disabled|tojson }}');
-        console.log(gray);
         for(const key in gray) {
             if(gray[key]) {   // disable action  
-                console.log(key);
                 document.getElementById(key).disabled = true;
             }
         }
@@ -420,7 +425,7 @@
             car_from =  document.getElementById("car-from").value;
             car_to =  document.getElementById("car-to").value;
             car_prices = JSON.parse('{{ car_costs|tojson }}');
-         
+     
             change_in_price = car_prices[car_to] - car_prices[car_from];
             downgrade = 1;
             if(change_in_price < 0)  // negative: downgrade = minus points
@@ -430,7 +435,7 @@
             // determine change in points
             change_in_points = 0
             if(car_from === car_to)
-            change_in_points = 0;   // cannot switch to current car
+                change_in_points = 0;   // cannot switch to current car
             else if(change_in_price <= 10000)
                 change_in_points = 10 * downgrade;
             else if(change_in_price <= 20000)
@@ -483,6 +488,13 @@
             });
         }
 
+        if(cur_age <= 35)
+            document.getElementById("child-100").setAttribute('style', 'font-weight: bold;');
+        else if((cur_age > 35) && (cur_age <= 40))
+            document.getElementById("child-75").setAttribute('style', 'font-weight: bold;');
+        else if((cur_age > 40) && (cur_age <= 45))
+            document.getElementById("child-50").setAttribute('style', 'font-weight: bold;');
+            
         house = "{{ player_info.house }}";
         path = "{{ player_info.path }}";
         if((cur_age == 22) && (house == "None") && (path != "military")) {
@@ -492,5 +504,9 @@
             });
             document.getElementById('change_house').disabled = false;
         }
+
+        money = parseFloat("{{ player_info.money }}");
+        loans_int = parseFloat("{{ loans_int }}");
+        if((money - loans_int) < 0) // cannot afford action
     </script>
 {% endblock %}
