--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -46,15 +46,17 @@
             <td class="col-attrs">
                 <ul>
                     <li>join at beginning of game</li>
-                    <li>must remain in military for at least 2 years</li>
+                    <li>must remain in military for at least 4 years</li>
                     <li class="once">salary doubles every 4 years up to 5 raises</li>
                     <li>if lose job, demoted; if at min salary and lose job again, kicked out of military and must pick regular job</li>
-                    <li>once reach 2 years, options:
+                    <li>once reach 4 years, options:
                         <ul>
                             <li>go to college:
                                 <ul>
-                                    <li>free tuition for 4 years</li>
-                                    <li>after graduation, eligible for benefits for # yrs served</li>
+                                    <li>25% off tuition for 4 years (still eligible for scholarships)</li>
+                                    <li>eligible for benefits for # yrs served (excluding 4 yrs of college)</li>
+                                    <li>must buy vehicle upon enrollment</li>
+                                    <li>must buy house upon graduation</li>
                                 </ul>
                             </li>
                             <li>stay in military:
